--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6721109543872458752" height="586" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>    
+    <iframe style="min-inline-size: -webkit-fill-available" src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6721109543872458752" height="586" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>    
   </body>
 </html>
